change starting view

--- a/index2.html
+++ b/index2.html
@@ -569,8 +569,8 @@ function initTexture(baseObj, textureKey, src) {
 var guiParams={
 	lightType:'custom custom',
 	tint:"white",
-	customLightAng:0,
-	customLightElev:0,
+	customLightAng:90,
+	customLightElev:60,
 	customCustomLightSharp:1,
 	textureType:'png',
 	sunColor:'#ffffff',
@@ -580,8 +580,8 @@ var guiParams={
 var textures={};
 var jpgTextures={};
 
-var turnAng=Math.PI/2;
-var pitchAng=0;
+var turnAng=-0.5;
+var pitchAng=Math.PI/2;
 var sunColorVec=[0,0,0];
 var skyColorVec=[0,0,0];
 
